crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.bug-invariant-expected-consistent-destructuring/error.txt
Found 1 error:

Invariant: Expected consistent kind for destructuring

Other places were `Reassign` but 'mutate? #t8$46[7:9]{reactive}' is const.

error.bug-invariant-expected-consistent-destructuring.ts:9:9
   7 |
   8 |   if (data) {
>  9 |     ({a, b} = data);
     |          ^ Expected consistent kind for destructuring
  10 |   }
  11 |
  12 |   const foo = useFoo(a);
